Fixed CSS bug that made impossible close sidebar on mobile when metaboxes exist.

--- a/edit-post/components/sidebar/style.scss
+++ b/edit-post/components/sidebar/style.scss
@@ -29,7 +29,7 @@
 		overflow: auto;
 		-webkit-overflow-scrolling: touch;
 		height: 100%;
-		margin-top: -1px;
+		margin-top: $panel-header-height;
 		margin-bottom: -1px;
 
 		@include break-small() {
@@ -38,7 +38,7 @@
 		}
 	}
 
-	> .components-panel .components-panel__header {
+	> .components-panel__header {
 		position: fixed;
 		z-index: z-index( '.components-panel__header' );
 		top: 0;
